
+++
** The commands that add ChangeLog entries now prefer a VCS root directory
for the ChangeLog file, if none already exists.  Customize
'change-log-directory-files' to nil for the old behavior.

---
** Support for non-string values of 'time-stamp-format' has been removed.

** Message

---
*** 'message-use-idna' now defaults to t (because Emacs comes with
built-in IDNA support now).

---
*** The 'message-valid-fqdn-regexp' variable has been removed, since
there are now top-level domains added all the time.  Message will no
longer warn about sending emails to top-level domains it hasn't heard
about.

*** 'message-beginning-of-line' (bound to C-a) understands folded headers.
In 'visual-line-mode' it will look for the true beginning of a header
while in non-'visual-line-mode' it will move the point to the indented
header's value.

** Tramp

+++
*** New connection method "sg", which supports editing files under a
different group ID.

+++
*** New connection method "doas" for OpenBSD hosts.

---
** 'auto-revert-use-notify' is set back to t in 'global-auto-revert-mode'.

** CSS mode

---
*** Support for completing attribute values, at-rules, bang-rules, and
HTML tags using the 'completion-at-point' command.

+++
** Emacs now supports character name escape sequences in character and
string literals.  The syntax variants \N{character name} and
\N{U+code} are supported.

+++
** Prog mode has some support for multi-mode indentation.
This allows better indentation support in modes that support multiple
programming languages in the same buffer, like literate programming
environments or ANTLR programs with embedded Python code.

A major mode can provide indentation context for a sub-mode through
the 'prog-indentation-context' variable.  To support this, modes that
provide indentation should use 'prog-widen' instead of 'widen' and
'prog-first-column' instead of a literal zero.  See the node
"Mode-Specific Indent" in the ELisp manual for more details.

** ERC
